# learnly

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.github/workflows/: README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: health.py  router.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/migrations/: env.py
backend/tests/: test_config.py  test_cors.py  test_health.py
docs/: api-contract.md  architecture.md  roadmap.md
frontend/: .prettierignore  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.module.css  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/admin/documents/: page.tsx
frontend/src/app/admin/documents/[id]/: page.tsx
frontend/src/app/admin/upload/: page.tsx
frontend/src/app/notes/: notes.module.css  page.tsx
frontend/src/app/notes/[slug]/: detail.module.css  page.tsx
frontend/src/components/: AdminViews.module.css  AdminViews.tsx  AppShell.module.css  AppShell.tsx  CustomCursor.module.css  CustomCursor.tsx  MotionPrimitives.tsx  RocketHero.module.css  RocketHero.tsx  SplashScreen.module.css  SplashScreen.tsx  ThemeToggle.module.css  ThemeToggle.tsx  ui.module.css  ui.tsx
frontend/src/mocks/: current-user.ts  documents.ts
frontend/src/services/: api-client.ts
frontend/src/types/: document.ts
