[build-system]
requires=["setuptools"]
build-backend="setuptools.build_meta"


[project]
name="learnly-backend"
version="0.1.0"
requires-python=">=3.12"
dependencies=[
"fastapi",
"uvicorn[standard]",
"pydantic-settings",
"sqlalchemy",
"alembic",
"psycopg[binary]",
]

[project.optional-dependencies]
dev=[
    "httpx2",
    "mypy",
    "pytest",
    "ruff"
]

[tool.setuptools.packages.find]
include=["app*"]

[tool.ruff]
line-length=100
target-version="py312"

[tool.ruff.lint]
select=["E","F","I","UP","B"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]




